Resolves: fdo#87601 specific html doc hangs on load

Change-Id: I67f472d72efe123b533d4d94be0084986c0e8349